--- a/index.html
+++ b/index.html
@@ -1,6 +1,52 @@
 <!doctype html>
 <html lang="en">
     <head>
+      <style>
+        body {
+    background-image: url('../imgs/BBLbackground.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.8);
+    }
+.container-custom {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.carousel-item:after {
+    content:"";
+    display:block;
+
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background:rgba(0,0,0,0.5);
+  }
+  .carousel-inner{
+    position:relative;
+  }
+  .BBLlogo{
+    display: block;
+    width: 50%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1000;
+  }
+  .cutout{
+    position: relative;
+    width: 60%;
+    z-index: 1;
+  }
+  .cutoutoutline{
+    width: 60%;
+    position: absolute;
+    left: 110px;
+    z-index: 2;
+  }
+      </style>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
