--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
       </footer>
       
 
-      <script src="JS/bbl.js"></script> 
+      <script src="JS/bbljs.js"></script> 
     </body>
 </html>
