--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
           <li class="dropdown">
             <a class="dropbtn" href="javascript:void(0)">Discover</a>
             <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="pages/Mission.html">Mission</a>
+              <a href="pages/Program.html">History</a>
+              <a href="#">Program</a>
+              <a href="#">Staff & Board Members</a>
+              <a href="pages/Curriculum.html">Curriculum</a>
             </div>
           </li>
           <li><a href="">Explore</a></li>
@@ -50,7 +52,7 @@
         </ul>
     
       
-<div class="container-custom p-4 mt-4 shadow rounded" style="background: rgba(255, 255, 255, 0.1);    ">
+<div class="container-custom p-4 mt-4 shadow rounded" style="background: rgba(88, 69, 51, 0.657);    ">
         <div class="row-fluid">
         <div id="carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
