--- a/pages/AudioSamples.html
+++ b/pages/AudioSamples.html
@@ -33,7 +33,21 @@
       
 <div class="container-custom p-4 mt-4 shadow rounded" style="background: rgba(88, 69, 51, 0.657);    ">
         <div class="row-fluid">
-          <div class="grid-container3x3">
+          <p class="Title">Where Have We Been?</p>
+          <div class="row" >
+            <img src="../imgs/leftstep.png" class="LS1"/>  
+            <img src="../imgs/leftstep.png" class="LS2"/>  
+            <img src="../imgs/leftstep.png" class="LS3"/>
+            <img src="../imgs/leftstep.png" class="LS4"/>
+            <img src="../imgs/leftstep.png" class="LS1"/>
+          </div>
+          <div class="row" >
+            <img src="../imgs/rightstep.png" class="RS1"/>
+            <img src="../imgs/rightstep.png" class="RS2"/>
+            <img src="../imgs/rightstep.png" class="RS3"/>
+            <img src="../imgs/rightstep.png" class="RS4"/>
+          </div>
+          <div class="grid-container3x3 m-4">
             <div class="grid-item">December 15, 2012</div>
             <div class="grid-item">Fall Recital</div>
             <div class="grid-item">Salem Baptist Church</div>  
