--- a/pages/Program.html
+++ b/pages/Program.html
@@ -34,7 +34,8 @@
       
 <div class="container-custom p-4 mt-4 shadow rounded" style="background: rgba(88, 69, 51, 0.657);    ">
         <div class="row-fluid">
-          <h1> BBL Fine Arts Academy</h1><br><br>
+          <img src="../imgs/Program_pic.JPG" class="Programpic"/>
+          <p class="title"> BBL Fine Arts Academy</p><br><br>
           <div class="program_text">
             The BBL Fine Arts Academy provides small group lessons and ensemble rehearsals to supplement the local middle and high school band programs.<br><br>
             We currently offer lessons for voice, brass (trumpet, trombone), reeds (clarinet, alto saxophone, tenor saxophone, baritone saxophone), and percussion (drums, piano, guitar, bass guitar)<br><br>
